--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@600&display=swap');
+
+* {
+    font-family: "Montserrat";
+}
+
 .pixel {
     background-color: white;
     border: 0;
@@ -15,4 +21,66 @@
     width: 500px;
     height: 500px;
     padding: 20px;
+}
+
+#tools {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 100px;
+    margin-right: 24px;
+}
+
+#tools-canvas {
+    display: flex;
+    border: 2px solid black;
+    padding: 24px;
+}
+
+#inputColorPicker {
+    width: 100px;
+    height: 100px;
+}
+
+#clear {
+    font-size: 36px;
+    border: 2px solid black;
+    padding: 8px;
+}
+
+#clear:hover {
+    background-color: #c2c2c2;
+    transition: 0.4s;
+}
+
+#clear:active {
+    background-color: red;
+}
+
+#sizeOfCanvas {
+    height: 72px;
+}
+
+.scroll {
+    display: flex;
+    flex-direction: column;
+}
+
+.scroll input {
+    margin-bottom: 0;
+}
+
+.scroll output {
+    text-align: center;
+    font-size: 24px;
+    margin-top: 0;
+}
+
+.forCenter {
+    height: 100vh;
+    overflow: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
